modified source code

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <label for="image" class="form-label">Upload Cancer Scan</label>
             <input class="form-control" type="file" name="image" id="image" required>
         </div>
-        <button class="btn btn-primary" type="submit">Predict</button>
+        <button class="btn btn-dark" type="submit">Predict</button>
     </form>
 
     {% if uploaded %}
